# celltraj2

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: data_contract.md  implementation_plan.md  make_docs.sh  publish_to_cancerdynamics.py  sitelab_handoff.md
docs/source/: conf.py  index.md
docs/source/api/: batch.rst  boundaries.rst  boundary_batch.rst  boundary_features.rst  cellpose_runner.rst  feature_extraction.rst  features.rst  index.rst  model_input.rst  paths.rst  registration.rst  registration_batch.rst  schema.rst  sitelab.rst  sources.rst  store.rst  surface_motion_batch.rst  tracking.rst  tracking_batch.rst  trajectory.rst
docs/source/concepts/: batch_segmentation.md  data_contract.md  h5_access_and_logging.md  sitelab_handoff.md
docs/source/developer/: implementation_plan.md  publishing.md
docs/source/getting_started/: installation.md  quickstart.md
src/celltraj2/: __init__.py  batch.py  boundaries.py  boundary_batch.py  boundary_features.py  feature_extraction.py  features.py  h5_access.py  model_input.py  object_indexing.py  objects.py  paths.py  registration.py  registration_batch.py  reporting.py  schema.py  sitelab.py  sources.py  store.py  surface_motion_batch.py  tracking.py  tracking_batch.py  trajectory.py
src/celltraj2/runners/: __init__.py  build_boundaries.py  cellpose_segment.py  extract_features.py  index_objects.py  register_global.py  track_centroids.py  track_objects.py  track_surfaces.py
tests/: test_batch.py  test_boundaries.py  test_features.py  test_h5_access.py  test_model_input.py  test_objects.py  test_paths.py  test_registration.py  test_schema.py  test_sitelab.py  test_sources.py  test_store.py  test_tracking.py
