[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "celltraj2"
version = "0.1.0"
description = "Frame-based microscopy trajectory analysis backend for SITE."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Davies Cancer Lab" },
]
dependencies = []

[project.scripts]
celltraj2-cellpose-segment = "celltraj2.runners.cellpose_segment:main"
celltraj2-index-objects = "celltraj2.runners.index_objects:main"

[project.urls]
Homepage = "https://github.com/cancer-dynamics/celltraj2"
Documentation = "https://cancerdynamics.org/docs/celltraj2/"
Issues = "https://github.com/cancer-dynamics/celltraj2/issues"

[project.optional-dependencies]
h5 = [
  "numpy>=1.24",
  "h5py>=3.10",
]
zarr = [
  "numpy>=1.24",
  "zarr>=2.18",
  "dask[array]>=2024",
]
tiff = [
  "numpy>=1.24",
  "tifffile>=2024",
]
nd2 = [
  "numpy>=1.24",
  "nd2>=0.10",
  "dask[array]>=2024",
  "xarray>=2024",
]
analysis = [
  "numpy>=1.24",
  "h5py>=3.10",
  "zarr>=2.18",
  "dask[array]>=2024",
  "tifffile>=2024",
]
dev = [
  "pytest>=8",
]
docs = [
  "sphinx>=7",
  "sphinx-rtd-theme>=2",
  "myst-parser>=2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
