[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "celltraj2"
version = "0.1.0"
description = "Frame-based microscopy trajectory analysis backend for SITE."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Davies Cancer Lab" },
]
dependencies = []

[project.scripts]
celltraj2-cellpose-segment = "celltraj2.runners.cellpose_segment:main"
celltraj2-index-objects = "celltraj2.runners.index_objects:main"
celltraj2-extract-features = "celltraj2.runners.extract_features:main"
celltraj2-register-global = "celltraj2.runners.register_global:main"
celltraj2-track-centroids = "celltraj2.runners.track_centroids:main"

[project.urls]
Homepage = "https://github.com/cancer-dynamics/celltraj2"
Documentation = "https://cancerdynamics.org/docs/celltraj2/"
Issues = "https://github.com/cancer-dynamics/celltraj2/issues"

[project.optional-dependencies]
h5 = [
  "numpy>=1.24",
  "h5py>=3.10",
]
zarr = [
  "numpy>=1.24",
  "zarr>=2.18",
  "dask[array]>=2024",
]
tiff = [
  "numpy>=1.24",
  "tifffile>=2024",
]
nd2 = [
  "numpy>=1.24",
  "nd2>=0.10",
  "dask[array]>=2024",
  "xarray>=2024",
]
analysis = [
  "numpy>=1.24",
  "h5py>=3.10",
  "scipy>=1.10",
  "scikit-image>=0.22",
  "pcdiff==1.0.1",
  "POT>=0.9.4,<1",
  "zarr>=2.18",
  "dask[array]>=2024",
  "xarray>=2024",
  "tifffile>=2024",
]
dev = [
  "pytest>=8",
]
docs = [
  "sphinx>=7",
  "sphinx-rtd-theme>=2",
  "myst-parser>=2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
